<resources>
    <string name="app_name">Plantagram</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Plantagram</string>
    <string name="nav_header_subtitle">Knowing to love, loving to care</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">News</string>
    <string name="menu_gallery">Locations</string>
    <string name="menu_slideshow">Questions</string>
    <string name="likes">likes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_take_picture">OK</string>
    <string name="photo_success">Photo has been saved successfully</string>
    <string name="request_identification">Request Identification</string>
    <string name="cancel_request_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="you_just_found">You just found:</string>
    <string name="short_description">Short description:</string>
    <string name="custom_you_finding_write_a_comment">Custom you finding, write a comment</string>
    <string name="suggested_name">Suggested name</string>
    <string name="logout">Logout</string>
    <string name="comments">Comments</string>
    <string name="user_name">User name</string>
    <string name="change_profile">Change Profile</string>
</resources>