<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/you_just_found" />

        <TextView
            android:id="@+id/plant_name_saving"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/text_view_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_description"
       />
        <TextView
            android:id="@+id/plant_description_saving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_you_finding_write_a_comment"
         />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/plant_comment_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
        <Button
            android:id="@+id/save_plant_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            />
</LinearLayout>


</LinearLayout>