<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.agostina.mr.plantagram2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.agostina.mr.plantagram2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.agostina.mr.plantagram2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/camera"
        android:name="com.agostina.mr.plantagram2.ui.request.CameraFragment"
        android:label=""
        tools:layout="@layout/fragment_camera">
        <action
            android:id="@+id/action_test_to_create_post"
            app:destination="@id/create_post" />
    </fragment>
    <fragment
        android:id="@+id/create_post"
        android:name="com.agostina.mr.plantagram2.ui.request.CreateRequestFragment"
        android:label="Request Identification"
        tools:layout="@layout/fragment_create_request">
        <argument
            android:name="path"
            app:argType="string"
            android:defaultValue="default" />
        <action
            android:id="@+id/action_create_post_to_test"
            app:destination="@id/camera" />
    </fragment>
</navigation>